finally fix wrong color of topbar. now the same as the logo. #WEBINTERFACE-14

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -201,7 +201,7 @@ label {
 #top {
     height: 90px;
     width: 100%;
-    background-color: #363636;
+    background-color: #333;
 }
 
 #toplogo {
